--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 				</div>
 			</div>	
 
-			<div class="section" id="B">
-				<div id="fillerTop" style="height: 15vh;"></div>
-				<div id="fillerBot" style="height: 15.005vh;"></div>
+			<div class="sectionImg" id="B">
+				<div id="fillerTop" style="height: 25vh;"></div>
+				<div id="fillerBot" style="height: 25.005vh;"></div>
 			</div>	
 			
 			<div class="section" id="C">
@@ -78,7 +78,11 @@
 				</div>
 			</div>	
 			
-			<div class="section" id="E"><div id="fillerTop" style="height: 15vh;"></div><div id="fillerBot" style="height: 15vh;"></div></div>	
+			<div class="sectionImg" id="E">
+				<div id="fillerTop" style="height: 25vh;"></div>
+				<div id="fillerBot" style="height: 25vh;"></div>
+			</div>	
+			
 			<div class="section" id="F"><svg height="100%" width="100%"><line x1="30%" y1="100%" x2="70%" y2="100%" style="stroke:rgb(0,0,0);stroke-width:2" /></svg></div>	
 			<div class="section" id="G"><svg height="100%" width="100%"><line x1="30%" y1="100%" x2="70%" y2="100%" style="stroke:rgb(0,0,0);stroke-width:2" /></svg></div>	
 			<div class="section" id="H"><button>Get to know me</button></div>	
