arrow button has functionality
now scrolls to first section and fades away

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					<a href="https://twitter.com/bogdanpozderca"><img class="HelloTwitter twitter" src="img/twitter.png"></a>
 					<p id="silly">Collected all 151 Pokemon. Makes cool things on the Internet. Problem Solver. Student. Freelance Food Scholar.</p>
 				</div>
-				<a href="#"><i class="fa fa-angle-double-down fa-5x seeMore"></i></a>
+				<i class="fa fa-angle-double-down fa-5x seeMore"></i>
 			</div>
 
 			<div class="section" id="A">
