--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
 
     	<title>Bogdan Pozderca</title>
 
-    	<link rel="stylesheet" type="text/css" href="css/index.css">
+    	<link rel="stylesheet" type="text/css" href="css/resume.css">
   	</head>
   	<body>    
 	    <nav class="navbar">
@@ -40,7 +40,7 @@
 			</div>
 	    </nav>
 
-	<div class="mainView">
+	<div id="wrap">
 
 		<object data="resume.pdf" type="application/pdf" width="100%" height="100%">
 		  <p>Alternative text - include a link <a href="myfile.pdf">to the PDF!</a></p>
