styled resume page

--- a/resume.html
+++ b/resume.html
@@ -21,19 +21,18 @@
 					<div id="icons">
 						<a href="https://github.com/bogdanpozderca"><img class="github" width="25px" height="25px" src="img/github.png"></a>
 						<a href="https://www.linkedin.com/in/bogdanpozderca"><img class="linkedin" width="25px" height="25px" src="img/linkedin.png"></a>
+						<a href="https://twitter.com/bogdanpozderca"><img class="twitter" width="25px" height="25px" src="img/twitter_circle.png"></a>
 					</div>
 				</div>
 				<ul>
 					<li class="menu"><a href="#about">About</a></li>
 					<li class="menu"><a href="#contact">Contact</a></li>
-					<li class="menu"><a href="#projects">Projects</a></li>
-					<li class="menu"><a href="resume.html">Resume</a></li>
+					<li class="menu last"><a href="#projects">Projects</a></li>
 					<li class="mobileMenu"><a href="#mobile"><img class="linkedin" width="30px" height="30px" src="img/mobileMenu.png"></a>
 						<ul style="padding-bottom: 15px">
 							<li><a href="#about">About</a></li>
 							<li><a href="#contact">Contact</a></li>
 							<li><a href="#projects">Projects</a></li>
-							<li style='border-bottom-left-radius: 5px; border-bottom-right-radius: 5px'><a href="resume.html">Resume</a></li>
 						</ul>
 					</li>
 				</ul>
