--- a/index.html
+++ b/index.html
@@ -31,9 +31,16 @@
 			<section id="hero">
 				<div id="inner-hero">
 					<div id="resume-wrapper">
-						<img id="resume-icon" src="img/resume-icon.svg">
-						Resume
+						<a href="/resume.html">
+							<img id="resume-icon" src="img/resume-icon.svg">
+						</a>
+						<a href="/resume.html">
+							Resume
+						</a>
+
 					</div>
+					
+
 					<div id="hero-title-wrapper">
 						<h1 class="hero-title">Michigan State University</h1> 
 						<h1 class="hero-title">Computer Science</h1> 
@@ -45,19 +52,24 @@
 
 			<section id="work">
 				<h1 id="work-title" class="title">Work Experience</h1>
-				<img id="work-icon" src="img/work-icon.svg">
-
+				<a href="/work.html">
+					<img id="work-icon" src="img/work-icon.svg">
+				</a>
 			</section>
 
 			<section id="projects">
 				<h1 id="project-title" class="title">Projects</h1>
 				<div id="project-type-wrap">
 					<div class="project-type">
-						<img class="project-img" src="img/hackathon.svg">
+						<a href="/hackathon.html">
+							<img class="project-img" src="img/hackathon.svg">
+						</a>
 						Hackathons
 					</div>
 					<div class="project-type" id="personal">
-						<img class="project-img" src="img/personal.svg">
+						<a href="/hackathon.html">
+							<img class="project-img" src="img/personal.svg">
+						</a>
 						Personal
 					</div>
 				</div>
@@ -67,9 +79,15 @@
 				<section id="contact-me">
 					<h1 id="contact-title" class="title">Contact Me</h1>
 					<div id="contact-icon-wrap">
-						<img class="contact-icon" src="img/linkedin-contact.svg">
-						<img class="contact-icon" src="img/email-contact.svg">
-						<img class="contact-icon" src="img/twitter-contact.svg">
+						<a href="https://www.linkedin.com/in/bogdanpozderca"  target="_blank">
+							<img class="contact-icon" src="img/linkedin-contact.svg">
+						</a>
+						<a href="mailto:bogdanpozderca@gmail.com">
+							<img class="contact-icon" src="img/email-contact.svg">
+						</a>
+						<a href="https://twitter.com/bogdanpozderca" target="_blank">
+							<img class="contact-icon" src="img/twitter-contact.svg">
+						</a>
 					</div>
 				</section>
 			</div>
