--- a/resume.html
+++ b/resume.html
@@ -15,40 +15,25 @@
   	</head>
   	<body>    
 	    <nav class="navbar">
-			<div class="container">
-				<div>
-					<div class="brand" onclick="location.href='index.html'">Bogdan Pozderca</div>
-					<div id="icons">
-						<a href="https://github.com/bogdanpozderca"><img class="github" width="25px" height="25px" src="img/github.png"></a>
-						<a href="https://www.linkedin.com/in/bogdanpozderca"><img class="linkedin" width="25px" height="25px" src="img/linkedin.png"></a>
-						<a href="https://twitter.com/bogdanpozderca"><img class="twitter" width="25px" height="25px" src="img/twitter_circle.png"></a>
-					</div>
+			<div id="nav-wrap">
+				<div id="brand-wrap">
+					<div id="brand" onclick="location.href='index.html'">Bogdan Pozderca</div>
 				</div>
-				<ul>
-					<li class="menu"><a href="#about">About</a></li>
-					<li class="menu"><a href="#contact">Contact</a></li>
-					<li class="menu last"><a href="#projects">Projects</a></li>
-					<li class="mobileMenu"><a href="#mobile"><img class="linkedin" width="30px" height="30px" src="img/mobileMenu.png"></a>
-						<ul style="padding-bottom: 15px">
-							<li><a href="#about">About</a></li>
-							<li><a href="#contact">Contact</a></li>
-							<li><a href="#projects">Projects</a></li>
-						</ul>
-					</li>
+				<ul id="menu-wrap">
+					<a href="https://www.linkedin.com/in/bogdanpozderca"><img class="icon desktop" src="img/linkedin.svg"></a>
+					<a href="https://twitter.com/bogdanpozderca"><img class="icon desktop" id="twitter" src="img/twitter.svg"></a>
+					<a href="https://github.com/bogdanpozderca"><img class="icon" src="img/github.svg"></a>
 				</ul>
 			</div>
 	    </nav>
 
-	<div id="wrap">
+		<div id="wrap">
 
-		<object data="resume.pdf" type="application/pdf" width="100%" height="100%">
-		  <p>Alternative text - include a link <a href="myfile.pdf">to the PDF!</a></p>
-		</object>
+			<object data="resume.pdf" type="application/pdf" width="100%" height="100%">
+			  <p>Oh no, it seems your browser doesn't support loading my pdf! <a href="myfile.pdf">Here is a link to it </a></p>
+			</object>
 
-	</div>
-
-
-	
+		</div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="js/index.js" type="text/javascript"></script>
