--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<section id="hero">
 				<div id="inner-hero">
 					<div id="resume-wrapper">
-						<a href="/resume.html">
+						<a href="resume.html">
 							<img id="resume-icon" src="img/resume-icon.svg">
 						</a>
 						<a href="/resume.html">
@@ -52,7 +52,7 @@
 
 			<section id="work">
 				<h1 id="work-title" class="title">Work Experience</h1>
-				<a href="/work.html">
+				<a href="work.html">
 					<img id="work-icon" src="img/work-icon.svg">
 				</a>
 			</section>
@@ -67,7 +67,7 @@
 						Hackathons
 					</div>
 					<div class="project-type" id="personal">
-						<a href="/hackathon.html">
+						<a href="hackathon.html">
 							<img class="project-img" src="img/personal.svg">
 						</a>
 						Personal
