added construction page to incomplete links

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 			<section id="work">
 				<h1 id="work-title" class="title">Work Experience</h1>
-				<a href="work.html">
+				<a href="construction.html">
 					<img id="work-icon" src="img/work-icon.svg">
 				</a>
 			</section>
@@ -61,13 +61,13 @@
 				<h1 id="project-title" class="title">Projects</h1>
 				<div id="project-type-wrap">
 					<div class="project-type">
-						<a href="/hackathon.html">
+						<a href="construction.html">
 							<img class="project-img" src="img/hackathon.svg">
 						</a>
 						Hackathons
 					</div>
 					<div class="project-type" id="personal">
-						<a href="hackathon.html">
+						<a href="construction.html">
 							<img class="project-img" src="img/personal.svg">
 						</a>
 						Personal
