--- a/resume.html
+++ b/resume.html
@@ -29,8 +29,8 @@
 
 		<div id="wrap">
 
-			<object data="resume.pdf" type="application/pdf" width="100%" height="100%">
-			  <p>Oh no, it seems your browser doesn't support loading my pdf! <a href="myfile.pdf">Here is a link to it </a></p>
+			<object data="bogdan-pozderca-resume.pdf" type="application/pdf" width="100%" height="100%">
+			  <h1>Oh no, it seems your browser doesn't support loading my pdf! <a href="bogdan-pozderca-resume.pdf" target="_blank" download>Here</a> is a link download it.</h1>
 			</object>
 
 		</div>
