--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
 	
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="vendor/js/jquery-headroom.min.js"></script>
+    <script src="vendor/js/headroom.min.js"></script>
+
     <script src="js/index.js" type="text/javascript"></script>
   </body>
 </html>
