--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <!-- <link rel="icon" href="img/favicon.ico" type="image/x-icon"> -->
     <title>Bogdan Pozderca</title>
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/index.css">
+    <link rel="stylesheet" type="text/css" href="assets/stylesheets/index.css">
   </head>
   <body>
     <nav>
       <ul>
-        <li id="home"><img class="icon" src="images/bogdan.png" alt="Bogdan Pozderca">
+        <li id="home"><img class="icon" src="assets/images/bogdan.png" alt="Bogdan Pozderca">
           <span>Bogdan</span>
         </li>
         <li>
@@ -67,6 +67,6 @@
       </div>
     </section>
     <!-- <div id="copyright">© Copyright 2015 Bogdan Pozderca</div> -->
-    <script src="javascripts/index.js" type="text/javascript"></script>
+    <script src="assets/javascripts/index.js" type="text/javascript"></script>
   </body>
 </html>
