--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <!-- <link rel="icon" href="img/favicon.ico" type="image/x-icon"> -->
     <title>Bogdan Pozderca</title>
 
-    <link rel="stylesheet" type="text/css" href="assets/stylesheets/index.css">
+    <link rel="stylesheet" type="text/css" href="assets/stylesheets/app.css">
   </head>
   <body>
     <nav>
       <ul>
-        <li id="home"><img class="icon" src="assets/images/bogdan.png" alt="Bogdan Pozderca">
+        <li class="bogdan"><img class="icon" src="assets/images/bogdan.png" alt="Bogdan Pozderca">
           <span>Bogdan</span>
         </li>
         <li>
