--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <section id="projects">
       <h1 class="section-header">
-        Personal Projects
+        <span class="title">Personal Projects</span>
       </h1>
       <div id="project-wrap">
         <div class="project">
