Mobile responsive grid

--- a/index.html
+++ b/index.html
@@ -38,31 +38,31 @@
       </div>
     </section>
 
-    <section id="projects">
-      <h1 class="section-header">
+    <section class="grid center">
+      <h1 class="header">
         <span class="title">Personal Projects</span>
       </h1>
-      <div id="project-wrap">
-        <div class="project">
+      <div class="container">
+        <div class="element">
           <div class="project-name">Project Name</div>
           <p class="project-description">
             Project Description. Lorem ipsum dolor sit amet, adipiscing egestas nullam Placerat urna parturient nunc nullam iaculis, ipsum urna parturient nunc nullam iaculis, ipsum urna parturient nunc nullam iaculis, ipsum
           </p>
           <!-- <div>links</div> -->
         </div>
-        <div class="project">
+        <div class="element">
           <div class="project-name">Project Name</div>
           <p class="project-description">
             Project Description. Lorem ipsum dolor sit amet.
           </p>
           <!-- <div>links</div> -->
         </div>
-        <div class="project"></div>
-        <div class="project"></div>
-        <div class="project"></div>
-        <div class="project"></div>
-        <div class="project"></div>
-        <div class="project"></div>
+        <div class="element"></div>
+        <div class="element"></div>
+        <div class="element"></div>
+        <div class="element"></div>
+        <div class="element"></div>
+        <div class="element"></div>
 
       </div>
     </section>
