--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
 
       </div>
     </section>
+    <section class="footer">
+      <p class="question">
+        <span class="text">Hey, did you notice there's no JS on here</span>
+        <span class="mark">?</span>
+      </p>
+    </section>
     <!-- <div id="copyright">© Copyright 2015 Bogdan Pozderca</div> -->
     <script src="assets/javascripts/index.js" type="text/javascript"></script>
   </body>
