--- a/resume.html
+++ b/resume.html
@@ -1,41 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-    	<meta charset="utf-8">
-    	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-    	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    	<meta name="description" content="">
-    	<meta name="author" content="Bogdan Pozderca">
-    	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-    	<link rel="icon" href="img/favicon.ico" type="image/x-icon">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="Bogdan Pozderca">
+    <!-- <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"> -->
+    <!-- <link rel="icon" href="img/favicon.ico" type="image/x-icon"> -->
+    <title>Bogdan Pozderca</title>
 
-    	<title>Bogdan Pozderca</title>
+    <link rel="stylesheet" type="text/css" href="assets/stylesheets/app.css">
+  </head>
+  <body>
+    <nav>
+      <ul>
+        <li class="bogdan"><img class="icon" src="assets/images/bogdan.png" alt="Bogdan Pozderca">
+          <span>Bogdan</span>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/bogdanpozderca">LinkedIn</a>
+        </li>
+        <li>
+          <a href="https://twitter.com/bogdanpozderca">Twitter</a>
+        </li>
+        <li>
+          <a href="https://github.com/bogdanpozderca">Github</a>
+        </li>
+      </ul>
+    </nav>
 
-    	<link rel="stylesheet" type="text/css" href="css/resume.css">
-  	</head>
-  	<body>    
-	    <nav class="navbar">
-			<div id="nav-wrap">
-				<div id="brand-wrap">
-					<div id="brand" onclick="location.href='index.html'">Bogdan Pozderca</div>
-				</div>
-				<ul id="menu-wrap">
-					<a href="https://www.linkedin.com/in/bogdanpozderca"><img class="icon desktop" src="img/linkedin.svg"></a>
-					<a href="https://twitter.com/bogdanpozderca"><img class="icon desktop" id="twitter" src="img/twitter.svg"></a>
-					<a href="https://github.com/bogdanpozderca"><img class="icon" src="img/github.svg"></a>
-				</ul>
-			</div>
-	    </nav>
+    <div id="wrap" style="height: 100vh;">
 
-		<div id="wrap">
+      <object data="Bogdan-Pozderca-Resume.pdf" type="application/pdf" width="100%" height="100%">
+        <h1>Oh no, it seems your browser doesn't support loading my resume!
+          <a href="Bogdan-Pozderca-Resume.pdf" target="_blank" download>Here</a>
+          is a link download it.</h1>
+      </object>
+    </div>
 
-			<object data="bogdan-pozderca-resume.pdf" type="application/pdf" width="100%" height="100%">
-			  <h1>Oh no, it seems your browser doesn't support loading my resume! <a href="bogdan-pozderca-resume.pdf" target="_blank" download>Here</a> is a link download it.</h1>
-			</object>
-
-		</div>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="js/index.js" type="text/javascript"></script>
   </body>
 </html>
