--- a/resume.html
+++ b/resume.html
@@ -30,7 +30,7 @@
       </ul>
     </nav>
 
-    <div id="wrap" style="height: 100vh;">
+    <div id="wrap" style="height: calc(100vh - 52px); margin-top: 52px;">
 
       <object data="Bogdan-Pozderca-Resume.pdf" type="application/pdf" width="100%" height="100%">
         <h1>Oh no, it seems your browser doesn't support loading my resume!
